--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <li>git clone path to repository</li>
         <li>git status -xctatus lokalnogo repositoria</li>
         <li>dit add path to file-dobavit novyy fayl pod kontrol gita</li>
-        <li>git commit -am "added new file index.html"</li>
+        <li>git commit -am "added new file index.html"---zafiksirovat izmenenii i dat im komentarii</li>
+		<li>git push - otpravit vce zakomichennye izmenenia v repozitoriy<li/>
+		<li/> git pull- zabrat cvezhie obnovlenia<li/>
+		
     </ul>
 </div>
