deleted / in ctroka 11

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <li>dit add path to file-dobavit novyy fayl pod kontrol gita</li>
         <li>git commit -am "added new file index.html"---zafiksirovat izmenenii i dat im komentarii</li>
 		<li>git push - otpravit vce zakomichennye izmenenia v repozitoriy<li/>
-		<li/> git pull- zabrat cvezhie obnovlenia<li/>
+		<li> git pull- zabrat cvezhie obnovlenia<li/>
 		
     </ul>
 </div>
